add portfolio items

--- a/public/projects/akillibaykus.mdx
+++ b/public/projects/akillibaykus.mdx
@@ -1,7 +1,4 @@
-<Title text="Akıllı Baykuş" />
-<Image src="/akillibaykus.png" alt="politik dogruculuk" />
+<Title text="Hunting Owl" />
+Hunting Owl is a platform that aims to enable customers to access courses or services.
 
-Akıllı Baykuş, müşterilerin eğitimlere veya hizmetlere ulaşmasını sağlamaya amaçlayan
-bir platform. Vue kullanılarak geliştirildi. CSS için Bootstrap kullanılmıştır. Akıllı
-Baykuş'ta hizmetveren olarak eğitim veya hizmet verebilir, bunları sitede listeleyerek
-bu eğitim ve hizmetlere ihtiyacı olanları bulabilirsiniz.
+<Image src="/akillibaykus.png" alt="politik dogruculuk" />
