--- a/public/projects/neyesek.mdx
+++ b/public/projects/neyesek.mdx
@@ -2,4 +2,4 @@
 
 Neyesek is a cross platform app where you can find open restaurants near your location.
 
-<Image src="/neyesek.jpg" alt="neyesek meal app" />
+<Image src="/neyesek.jpg" alt="neyesek meal app" mobile />
