--- a/public/projects/d2goo.mdx
+++ b/public/projects/d2goo.mdx
@@ -2,4 +2,4 @@
 
 D2goo is a fintech project integrated with open banking systems, a mobile app written for Android
 
-<Image src="/d2goo.jpeg" alt="d2goo fintech app" />
+<Image src="/d2goo.jpeg" alt="d2goo fintech app" mobile />
