update projects page

--- a/public/projects/akillibaykus.mdx
+++ b/public/projects/akillibaykus.mdx
@@ -1,4 +1,3 @@
 <Title text="Hunting Owl" />
-Hunting Owl is a platform that aims to enable customers to access courses or services.
-
+<Text text="Hunting Owl is a platform that aims to enable customers to access courses or services." />
 <Image src="/akillibaykus.png" alt="politik dogruculuk" />
