--- a/public/projects/circles.mdx
+++ b/public/projects/circles.mdx
@@ -1,5 +1,5 @@
 <Title text="Circles" />
 
-Circles is an ecommerce site for a textile company. It works integrated with Shopify.
+<Text text="Circles is an ecommerce site for a textile company. It works integrated with Shopify." />
 
 <Image src="/circles.png" alt="circles.com.tr" />
