--- a/public/projects/d2goo.mdx
+++ b/public/projects/d2goo.mdx
@@ -1,5 +1,5 @@
 <Title text="D2Goo" />
 
-D2goo is a fintech project integrated with open banking systems, a mobile app written for Android
+<Text text="D2goo is a fintech project integrated with open banking systems, a mobile app written for Android." />
 
 <Image src="/d2goo.jpeg" alt="d2goo fintech app" mobile />
