--- a/public/projects/neyesek.mdx
+++ b/public/projects/neyesek.mdx
@@ -1,5 +1,8 @@
 <Title text="NeYesek" />
 
-Neyesek is a cross platform app where you can find open restaurants near your location.
+<Text
+  text=" Neyesek is a cross platform app where you can find open restaurants near your
+  location."
+/>
 
 <Image src="/neyesek.jpg" alt="neyesek meal app" mobile />
