--- a/public/projects/whalemints.mdx
+++ b/public/projects/whalemints.mdx
@@ -1,5 +1,5 @@
 <Title text="Whalemints" />
 
-Whalemints is a website where users get information about new NFT projects on different blockchains.
+<Text text="Whalemints is a website where users get information about new NFT projects on different blockchains." />
 
 <Image src="/whalemints.png" alt="whalemints.com" />
