--- a/public/projects/firtinadannotlar.mdx
+++ b/public/projects/firtinadannotlar.mdx
@@ -1,5 +1,5 @@
 <Title text="Fırtınadan Notlar" />
 
-Fırtınadan Notlar is a blog on arts such as film, music and theater.
+<Text text="Fırtınadan Notlar is a blog on arts such as film, music and theater." />
 
 <Image src="/firtinadannotlar.png" alt="firtinadannotlar.com" />
