add image modal

--- a/public/projects/circles.mdx
+++ b/public/projects/circles.mdx
@@ -1,3 +1,8 @@
+---
+image: "/circles.png"
+link: ""
+---
+
 <Title text="Circles" />
 
 <Text text="Circles is an ecommerce site for a textile company. It works integrated with Shopify." />
