--- a/public/projects/d2goo.mdx
+++ b/public/projects/d2goo.mdx
@@ -1,3 +1,8 @@
+---
+image: "/d2goo.jpeg"
+link: ""
+---
+
 <Title text="D2Goo" />
 
 <Text text="D2goo is a fintech project integrated with open banking systems, a mobile app written for Android." />
