--- a/public/projects/firtinadannotlar.mdx
+++ b/public/projects/firtinadannotlar.mdx
@@ -1,3 +1,8 @@
+---
+image: ""
+link: "https://www.firtinadannotlar.com"
+---
+
 <Title text="Fırtınadan Notlar" />
 
 <Text text="Fırtınadan Notlar is a blog on arts such as film, music and theater." />
