--- a/public/projects/whalemints.mdx
+++ b/public/projects/whalemints.mdx
@@ -1,3 +1,8 @@
+---
+image: "/whalemints.png"
+link: ""
+---
+
 <Title text="Whalemints" />
 
 <Text text="Whalemints is a website where users get information about new NFT projects on different blockchains." />
