--- a/public/projects/akillibaykus.mdx
+++ b/public/projects/akillibaykus.mdx
@@ -1,3 +1,8 @@
+---
+image: ""
+link: "https://www.akillibaykus.com"
+---
+
 <Title text="Hunting Owl" />
 <Text text="Hunting Owl is a platform that aims to enable customers to access courses or services." />
 <Image src="/akillibaykus.png" alt="politik dogruculuk" />
