update blog pages

--- a/public/blog-posts/gattaca-incelemesi.mdx
+++ b/public/blog-posts/gattaca-incelemesi.mdx
@@ -8,10 +8,22 @@ category: "fikir,film"
 
 <Date text="3 Mart 2023" />
 <Title text="Gattaca (1997) Film İncelemesi" />
+<Subtitle text="Tanrının zar atmadığı bir evren, Gattaca’ya hoşgeldiniz…" />
+
+<Image src="/gattaca.webp" alt="politik dogruculuk" />
 
 Günümüze çok yakın bir gelecekte, insanlık artık doğacak bebeklerin genleri üzerinde değişiklik yapabilen bir teknoloji geliştirmiş durumda. En başta amaçları hastalıklarından arınmış sağlıklı bir toplum yaratmak iken, bu teknolojiyi güçlü, zeki, kusursuza yakın bebekler oluşturmaya, hatta doğacak bebeklerin göz renginin bile belirlenmesinde kullanmaya başladılar.
 
 Vincent genetik çalışmanın ürünü olarak değil normal yollarla dünyaya gelen bir çocuktur. Bu da onun potansiyel bazı hastalıklar ve negatif genetik özelliklerle doğmasına sebep olur. Bilim, Vincent doğduğu anda onun muhtemel sağlık problemlerini bir rapor halinde aileye sunar.
+
+<Quote
+  text="Nörolojik problem %60 olasılık,
+    Ağır Depresyon %42 olasılık,
+    Dikkat eksikliği %89 olasılık,
+    Kalp hastalığı %99 olasılık,
+    Tahmini yaşam süresi 30.2 yıl
+"
+/>
 
 Vücudu yaşıtlarına göre zayıf, gözleri iyi görmüyordu. Ailesi, Vincent’e bir kardeş yapmaya karar verdi. Ama bu sefer risk almak istemediler. Parası olan insanların default tercihi olan “Tasarlanmış Bebek” yapmak üzere hastaneye gittiler. Burada yeni bebeklerini en iyi özellikleriyle seçtiler ve Vincent’in kardeşi dünyaya geldi. Vincent, kardeşinin gölgesinde büyümeye devam etti. Kardeşini hiç bir konuda yenemiyordu çünkü kardeşinin genleri her alanda ondan daha iyiydi. Yüzme yarışlarında hiç bir zaman kardeşini yenemiyordu. Zaman içinde Vincent, uzaya merak saldı. Artık yeni bir hayali vardı: Astronot olmak.
 
@@ -37,5 +49,7 @@ Doğduğumuz aile ve ortam, geleceğimiz üzerinde zaten yeterince etkiliyken bi
 <Subheader text="Genetik Düzenlemelerin Oluşturabileceği Problemler" />
 
 Teknolojinin bu yönde gelişmesinin pek çok hastalığın kökünü kazımasına sebep olmasıyla birlikte, insanlığa pek çok konuda karmaşık sorunlar çıkarabilir. Film de İncil’den bir referansla başlıyor.
+
+<Quote text="Tanrı’nın eserini düşünün. Onun eğdiğini kim düzeltebilir?" />
 
 Bilimin bir hastalığı ortadan kaldırmak için yaptığı bir gen düzenlemesinin o hastalığı ortadan kaldırmak dışında başka bir etkisi olabilir mi? Bu konuda günümüze kadar pek çok çalışma yapılmış ve her bir genin aynı zamanda birden çok fiziksel özelliği etkileyebildiği ortaya konulmuş. Teknolojinin henüz stabil hale gelmediği bir evrende, yeşil gözlü yapacak bir gen düzenlemesinin, ayak parmaklarında problem çıkartma ihtimali var. Belki de ortaya çıkacak bu problemlerin doğacak ilk nesilde değil de sonraki nesillerde ortaya çıkmaya ihtimali var. Bu durumda insanlığın sonunu bilimin hazırlayabileceği pek çok senaryo üretmek mümkün. Genetik düzenlemeler konusunda yapılacak çalışmaların sınırlarının belirlenmesi ve deneylerin, araştırmaların itinayla yapılması geleceğimiz için çok önemli gözüküyor.
