feat: add new projects, sitemap update

--- a/public/projects/couplestats.mdx
+++ b/public/projects/couplestats.mdx
@@ -1,6 +1,7 @@
 ---
 image: ""
-link: "https://play.google.com/store/apps/details?id=com.erdemgonul.couplestats"
+playstoreLink: "https://play.google.com/store/apps/details?id=com.erdemgonul.couplestats"
+appstoreLink: "https://apps.apple.com/us/app/couple-diary-love-tracker/id6446800092"
 ---
 
 <Title text="Couple Diary" />
