--- a/public/projects/wifihotspot.mdx
+++ b/public/projects/wifihotspot.mdx
@@ -1,6 +1,6 @@
 ---
 image: ""
-link: "https://play.google.com/store/apps/details?id=com.wifianalyzer.wifi.hotspot.speedtest"
+playstoreLink: "https://play.google.com/store/apps/details?id=com.wifianalyzer.wifi.hotspot.speedtest"
 ---
 
 <Title text="Wifi Hotspot & Wi-Fi Analyzer" />
